@@ -1,3 +1,4 @@
+* Add get, in_ and contains methods to PYSON
 * Manage deletable and writable state
 * Support e-mail template
 * Always encode CSV export in UTF-8
